Correction de bug concernant le Dark Mode et Ajout de plus d'info pour les downloads

--- a/style.css
+++ b/style.css
@@ -246,6 +246,20 @@ a.link {
 	cursor: pointer;
 }
 
+p.download_latest {
+	font-weight: bold;
+	text-decoration: underline;
+}
+
+a.download_other {
+	color: grey;
+	text-decoration: none;
+}
+
+a.download_other:hover {
+	color: red;
+}
+
 /*Scrollbar*/
 
 ::-webkit-scrollbar {
